--- a/rainforest/app/views/products/index.html.erb
+++ b/rainforest/app/views/products/index.html.erb
@@ -8,5 +8,8 @@
   Name: <%= product.name %> <br>
   Description: <%= product.description %> <br>
   Price: <%= product.price_in_cents %> <br>
-  <p></p>
+  <p>
+    <%= link_to "Details", "/products/#{product.id}" %> <br>
+  </p>
+  <br>
 <% end %>
