--- a/rainforest/app/views/products/new.html.erb
+++ b/rainforest/app/views/products/new.html.erb
@@ -1,32 +1,3 @@
 <h1>New Product</h1>
 
-<%= form_for @product do |f| %>
-
-
-  <% if @product.errors.any? %>
-  <div id="error_explanation">
-    <h3><%= pluralize(@product.errors.count, "error") %> prohibited this product from being saved:</h3>
-
-    <ul>
-    <% @product.errors.full_messages.each do |msg| %>
-      <li><%= msg %></li>
-    <% end %>
-    </ul>
-  </div>
-  <% end %>
-
-  <%= f.label "Name" %><br>
-  <%= f.text_field :name %><br>
-  <br>
-
-  <%= f.label "Description" %><br>
-  <%= f.text_area :description %><br>
-  <br>
-
-  <%= f.label "Price" %><br>
-  <%= f.text_field :price_in_cents %><br>
-  <br>
-
-  <%= f.submit %>
-
-<% end %>
+<%= render 'form' %>
