--- a/rainforest/app/views/layouts/application.html.erb
+++ b/rainforest/app/views/layouts/application.html.erb
@@ -8,7 +8,15 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
+  <header>
+    <nav>
+      <%= link_to("Home Page", "/") %>
+      <%= link_to("New Product", new_product_path) %>
+    </nav>
+  </header>
+
   <body>
     <%= yield %>
   </body>
+
 </html>
