updated rainforest - added flash notice to create, edit and detrory controller method, and at application view

--- a/rainforest/app/views/layouts/application.html.erb
+++ b/rainforest/app/views/layouts/application.html.erb
@@ -15,7 +15,14 @@
     </nav>
   </header>
 
+  <br>
+  
   <body>
+    <% if flash[:notice] %>
+      <div class="notice">
+        <%= flash[:notice] %>
+      </div>
+    <% end %>
     <%= yield %>
   </body>
 
