updated rainforest - updated method in product model to display price in dollars

--- a/rainforest/app/views/products/index.html.erb
+++ b/rainforest/app/views/products/index.html.erb
@@ -7,7 +7,7 @@
 <% @products.each do |product| %>
   Name: <%= product.name %> <br>
   Description: <%= product.description %> <br>
-  Price: <%= product.price_in_cents %> <br>
+  Price: <%= product.price_in_dollars %> <br>
   <p>
     <%= link_to "Details", "/products/#{product.id}" %> <br>
   </p>
