--- a/rainforest/app/views/products/show.html.erb
+++ b/rainforest/app/views/products/show.html.erb
@@ -2,7 +2,7 @@
 
   Name: <%= @product.name %> <br>
   Description: <%= @product.description %> <br>
-  Price: $<%= @product.price_in_cents %> <br>
+  Price: <%= @product.price_in_dollars %> <br>
   <p>
     <%= link_to "Edit", "/products/#{@product.id}/edit" %>
     | <%= link_to "Delete", "/products/#{@product.id}", method: :delete, data: {Confirm: "Are you sure?"} %>
